# PalletJack

./: .gitignore  .gitmodules  README.md  my.parquet.index  requirements.txt  test_indexed_metadata.py  test_rapid_parquet.py
.github/workflows/: python-app.yml  python-benchmarks.yml  python-cd.yml  python-ci.yml  python.yml
benchmarks/: benchmark_arrow_api.py  benchmark_fastparquet.py  benchmark_indexed_metadata.py  benchmark_org_arrow.py  benchmark_palletjack_metadata.py
docs/adr/: 0001-encryption-support.md
python/: .gitignore  Dockerfile.test  README.md  ci-script.sh  log1.txt  pyproject.toml  requirements.txt  setup.py  vcpkg.json
python/palletjack/: __init__.py  cpalletjack.pxd  palletjack.cc  palletjack.h  palletjack_cython.cpp  palletjack_cython.pyi  palletjack_cython.pyx  parquet_types.cpp  parquet_types_palletjack.cpp  parquet_types_palletjack.h  windows_fixup.h
python/test/: test_palletjack.py  test_palletjack_metadata.py  test_readme.py
python/test/data/: golden_master.parquet.index.v2  golden_master.parquet.index.v3  no_column_orders.parquet  sample.parquet  sample.parquet.index
python/tests/: test_palletjack.py
python/wheelhouse/: rapid_parquet_marcin_krystianc-0.0.1-cp37-cp37m-linux_x86_64.whl
submodules/thrift/lib/php/lib/Factory/: TTransportFactory.php
